# hand-tracking

./: LICENSE  ML.py  README.md  depth_testing.py  extrinsic_calibration.py  hand_static_test.py  pyproject.toml  relative_movements.py
calibration/: calculate_intrinsics.py  calibrate.py  camera_matrix.txt  camera_parameters.npz  dist_coefficients.txt  hand_eye_transformation.txt  record_data.py
data/: relative_movements_rotation_big.txt  relative_movements_rotation_big_with_images.txt  relative_movements_rotation_small.txt  relative_movements_rotation_small_with_images.txt  relative_movements_translation_aruco_big.txt  relative_movements_translation_aruco_small.txt  relative_movements_translation_aruco_small_closer.txt  relative_movements_translation_big_with_images.txt  relative_movements_translation_glove_black.txt  relative_movements_translation_glove_orange.txt  relative_movements_translation_glove_transparent.txt  relative_movements_translation_glove_white.txt  relative_movements_translation_hand.txt  relative_movements_translation_hand_avg.txt  relative_movements_translation_hand_test.txt  relative_movements_translation_small_with_images.txt  relative_movements_translation_small_with_images_closer.txt  static_noise_test.txt  trash.txt  visual_servo_mediapipe_10.txt  visual_servo_mediapipe_50.txt  visual_servo_mediapipe_orange_glove_10.txt  visual_servo_mediapipe_orange_glove_50.txt
extrinsic calibration/: extrinsic_calibration.py
extrinsic_data/: pose_1.txt  pose_10.txt  pose_11.txt  pose_12.txt  pose_13.txt  pose_14.txt  pose_15.txt  pose_16.txt  pose_17.txt  (+11 more)
(+13 files in other folders)
